tests/ui/type-alias-impl-trait/unnameable_type.stderr
error[E0053]: method `dont_define_this` has an incompatible type for trait
  --> $DIR/unnameable_type.rs:20:34
   |
LL | type MyPrivate = impl Sized;
   |                  ---------- the found opaque type
...
LL |     fn dont_define_this(private: MyPrivate) {
   |                                  ^^^^^^^^^ expected `Private`, found opaque type
   |
note: type in trait
  --> $DIR/unnameable_type.rs:10:39
   |
LL |         fn dont_define_this(_private: Private) {}
   |                                       ^^^^^^^
   = note: expected signature `fn(Private)`
              found signature `fn(MyPrivate)`
help: change the parameter type to match the trait
   |
LL -     fn dont_define_this(private: MyPrivate) {
LL +     fn dont_define_this(private: Private) {
   |

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0053`.
